--- a/index.html
+++ b/index.html
@@ -31,9 +31,10 @@
 
   <!-- Connexion Phantom -->
   <section class="flex flex-col items-center mt-8 px-4">
-    <button id="connectButton" class="w-full md:w-auto px-6 py-3 bg-purple-600 hover:bg-purple-700 rounded-lg font-bold">
-      Se connecter avec Phantom
+    <button id="connectButton" type="button" class="w-full md:w-auto px-6 py-3 bg-purple-600 hover:bg-purple-700 rounded-lg font-bold">
+  Se connecter avec Phantom
     </button>
+    
     <div id="status" class="mt-4 text-gray-400 text-sm md:text-base">Statut : Non connecté</div>
     <div id="wallet-info" class="mt-2 text-green-400 font-mono break-words text-xs md:text-sm">En attente de connexion...</div>
   </section>
