--- a/index.html
+++ b/index.html
@@ -32,9 +32,8 @@
   <!-- Connexion Phantom -->
   <section class="flex flex-col items-center mt-8 px-4">
     <button id="connectButton" type="button" class="w-full md:w-auto px-6 py-3 bg-purple-600 hover:bg-purple-700 rounded-lg font-bold">
-  Se connecter avec Phantom
+      Se connecter avec Phantom
     </button>
-    
     <div id="status" class="mt-4 text-gray-400 text-sm md:text-base">Statut : Non connecté</div>
     <div id="wallet-info" class="mt-2 text-green-400 font-mono break-words text-xs md:text-sm">En attente de connexion...</div>
   </section>
@@ -103,7 +102,6 @@
     let raydiumSdk = null;
 
     async function initRaydium() {
-      // Initialise Raydium SDK instance when provider & connection are available
       try {
         raydiumSdk = new window.Raydium({
           connection: connection,
@@ -119,29 +117,21 @@
       }
     }
 
-    // Placeholder functions: remplace par tes implémentations existantes
     async function createRaydiumPool(mintPubkey, owner, solAmount) {
-      // Implémentation réelle attendue ici
-      // Retour d'exemple : { poolAddress: new solanaWeb3.PublicKey("...") }
       throw new Error("createRaydiumPool non implémentée dans cet exemple");
     }
     async function fundPool(poolAddress, owner, mintPubkey, solAmount, tokenAmount) {
       throw new Error("fundPool non implémentée dans cet exemple");
     }
 
-    // Formulaire : placeholder minimal pour éviter erreurs si non implémenté
     document.getElementById("tokenForm").addEventListener("submit", async (e) => {
       e.preventDefault();
-      // Vérification basique
       const status = document.getElementById("status");
       if (!provider?.publicKey) { status.innerText = "Veuillez connecter un portefeuille."; return; }
-      // Ici tu peux appeler tes fonctions réelles createTokenMint, mintTokensToAccount, createRaydiumPool, fundPool...
       status.innerText = "Fonction de création non activée dans cet exemple.";
     });
 
-    // Network selector placeholder (si tu en as un)
     async function updateNetwork() {
-      // Exemple : set connection selon network
       connection = new solanaWeb3.Connection(solanaWeb3.clusterApiUrl(network), 'confirmed');
     }
     updateNetwork().then(() => initRaydium());
@@ -149,91 +139,153 @@
 
   <!-- Script Phantom (module) -->
   <script type="module">
-  import nacl from "https://cdn.skypack.dev/tweetnacl";
-  import bs58 from "https://cdn.skypack.dev/bs58";
+    import nacl from "https://cdn.skypack.dev/tweetnacl";
+    import bs58 from "https://cdn.skypack.dev/bs58";
 
-  document.addEventListener("DOMContentLoaded", () => {
-    const connectBtn = document.getElementById('connectButton');
-    const statusDiv = document.getElementById('status');
-    const walletInfoDiv = document.getElementById('wallet-info');
+    document.addEventListener("DOMContentLoaded", () => {
+      const connectBtn = document.getElementById('connectButton');
+      const statusDiv = document.getElementById('status');
+      const walletInfoDiv = document.getElementById('wallet-info');
 
-    // --- Helpers ---
-    function isMobile() {
-      return /Android|iPhone|iPad|iPod/i.test(navigator.userAgent);
-    }
-
-    function currentPageUrl() {
-      return window.location.origin + window.location.pathname;
-    }
-
-    // --- Décryptage du retour Phantom ---
-    async function handlePhantomReturn() {
-      const params = new URLSearchParams(window.location.search);
-      const phantomPubKeyB58 = params.get("phantom_encryption_public_key");
-      const dataB64 = params.get("data");
-      const nonceB64 = params.get("nonce");
-
-      if (!phantomPubKeyB58 || !dataB64 || !nonceB64) return;
-
-      statusDiv.innerText = "✅ Wallet connecté via Phantom (retour)";
-      try {
-        const dappSecretKeyB58 = sessionStorage.getItem("dappSecretKeyBase58");
-        if (!dappSecretKeyB58) {
-          walletInfoDiv.innerText = "⚠️ Clé secrète introuvable (générée avant la redirection)";
-          return;
-        }
-
-        const dappSecretKey = bs58.decode(dappSecretKeyB58);
-        const phantomPublicKey = bs58.decode(phantomPubKeyB58);
-
-        const data = Uint8Array.from(atob(dataB64), c => c.charCodeAt(0));
-        const nonce = Uint8Array.from(atob(nonceB64), c => c.charCodeAt(0));
-
-        const decrypted = nacl.box.open(data, nonce, phantomPublicKey, dappSecretKey);
-        if (!decrypted) {
-          walletInfoDiv.innerText = "❌ Impossible de déchiffrer le message de Phantom";
-          return;
-        }
-
-        const payloadStr = new TextDecoder().decode(decrypted);
-        let payload;
-        try { payload = JSON.parse(payloadStr); } catch { payload = { raw: payloadStr }; }
-
-        if (payload?.public_key) {
-          walletInfoDiv.innerText = `Adresse du wallet : ${payload.public_key}\nSession : ${payload.session || "—"}`;
-        } else {
-          walletInfoDiv.innerText = `Payload: ${payloadStr}`;
-        }
-
-        // Nettoie l’URL pour éviter redécryptage au refresh
-        window.history.replaceState({}, document.title, currentPageUrl());
-      } catch (err) {
-        walletInfoDiv.innerText = "Erreur retour Phantom: " + (err?.message || err);
+      if (!connectBtn) {
+        console.warn("connectButton introuvable — vérifie l'ID dans le HTML");
+        return;
       }
-    }
 
-    // --- Connexion mobile (deep link) ---
-    function connectMobile() {
-  statusDiv.innerText = "📱 Redirection vers l'app Phantom...";
-  const keyPair = nacl.box.keyPair();
-  const dappPublicKeyB58 = bs58.encode(keyPair.publicKey);
-  const dappSecretKeyB58 = bs58.encode(keyPair.secretKey);
-  sessionStorage.setItem("dappSecretKeyBase58", dappSecretKeyB58);
+      // Helpers
+      function isMobile() {
+        return /Android|iPhone|iPad|iPod/i.test(navigator.userAgent);
+      }
+      function currentPageUrl() {
+        return window.location.origin + window.location.pathname;
+      }
 
-  const appUrl = encodeURIComponent(currentPageUrl());
-  const redirectLink = encodeURIComponent(currentPageUrl());
+      // Décryptage du retour Phantom (mobile)
+      async function handlePhantomReturn() {
+        try {
+          const params = new URLSearchParams(window.location.search);
+          const phantomPubKeyB58 = params.get("phantom_encryption_public_key");
+          const dataB64 = params.get("data");
+          const nonceB64 = params.get("nonce");
+          if (!phantomPubKeyB58 || !dataB64 || !nonceB64) return;
 
-  const deepLink =
-    `https://phantom.app/ul/v1/connect` +
-    `?dapp_encryption_public_key=${dappPublicKeyB58}` +
-    `&app_url=${appUrl}` +
-    `&redirect_link=${redirectLink}` +
-    `&cluster=mainnet-beta`;
+          statusDiv.innerText = "✅ Wallet connecté via Phantom (retour)";
+          const dappSecretKeyB58 = sessionStorage.getItem("dappSecretKeyBase58");
+          if (!dappSecretKeyB58) {
+            walletInfoDiv.innerText = "⚠️ Clé secrète introuvable (rappuie sur le bouton pour relancer)";
+            return;
+          }
 
-  console.log("Deep link:", deepLink);
-  console.log("Saved secret:", sessionStorage.getItem("dappSecretKeyBase58"));
+          const dappSecretKey = bs58.decode(dappSecretKeyB58);
+          const phantomPublicKey = bs58.decode(phantomPubKeyB58);
+          const data = Uint8Array.from(atob(dataB64), c => c.charCodeAt(0));
+          const nonce = Uint8Array.from(atob(nonceB64), c => c.charCodeAt(0));
 
-  // Lancer la redirection
-  window.location.replace(deepLink);
-    }
-    
+          const decrypted = nacl.box.open(data, nonce, phantomPublicKey, dappSecretKey);
+          if (!decrypted) {
+            walletInfoDiv.innerText = "❌ Impossible de déchiffrer le message de Phantom";
+            return;
+          }
+
+          const payloadStr = new TextDecoder().decode(decrypted);
+          try {
+            const payload = JSON.parse(payloadStr);
+            walletInfoDiv.innerText = `Adresse du wallet : ${payload.public_key}\nSession : ${payload.session || "—"}`;
+            try {
+              window.provider = {
+                publicKey: new solanaWeb3.PublicKey(payload.public_key),
+                signTransaction: async (tx) => { throw new Error("signTransaction non implémenté pour mobile deep link"); },
+                signAllTransactions: async (txs) => { throw new Error("signAllTransactions non implémenté pour mobile deep link"); }
+              };
+            } catch (e) {
+              console.warn("Impossible d'initialiser provider mobile:", e);
+            }
+          } catch {
+            walletInfoDiv.innerText = payloadStr;
+          }
+
+          // Nettoie l'URL pour éviter redécryptage au refresh
+          window.history.replaceState({}, document.title, currentPageUrl());
+        } catch (err) {
+          console.error("handlePhantomReturn error:", err);
+          walletInfoDiv.innerText = "Erreur retour Phantom: " + (err?.message || err);
+        }
+      }
+
+      // Connexion mobile (deep link)
+      function connectMobile() {
+        try {
+          statusDiv.innerText = "📱 Redirection vers l'app Phantom...";
+          const keyPair = nacl.box.keyPair();
+          const dappPublicKeyB58 = bs58.encode(keyPair.publicKey);
+          const dappSecretKeyB58 = bs58.encode(keyPair.secretKey);
+          sessionStorage.setItem("dappSecretKeyBase58", dappSecretKeyB58);
+
+          const appUrl = encodeURIComponent(currentPageUrl());
+          const redirectLink = encodeURIComponent(currentPageUrl());
+
+          const deepLink =
+            `https://phantom.app/ul/v1/connect` +
+            `?dapp_encryption_public_key=${dappPublicKeyB58}` +
+            `&app_url=${appUrl}` +
+            `&redirect_link=${redirectLink}` +
+            `&cluster=mainnet-beta`;
+
+          console.log("Deep link:", deepLink);
+          console.log("Saved secret:", sessionStorage.getItem("dappSecretKeyBase58"));
+
+          // Lancer la redirection
+          window.location.replace(deepLink);
+        } catch (err) {
+          console.error("connectMobile error:", err);
+          statusDiv.innerText = "Erreur redirection mobile: " + (err?.message || err);
+        }
+      }
+
+      // Connexion desktop (extension)
+      async function connectDesktop() {
+        statusDiv.innerText = "Tentative de connexion via extension...";
+        try {
+          if (window.solana && window.solana.isPhantom) {
+            const resp = await window.solana.connect();
+            statusDiv.innerText = "✅ Connecté via extension";
+            walletInfoDiv.innerText = resp.publicKey.toString();
+
+            try {
+              window.provider = window.solana;
+              if (typeof initRaydium === "function") {
+                try { initRaydium(); } catch (e) { console.warn("initRaydium error:", e); }
+              }
+            } catch (e) {
+              console.warn("Impossible d'initialiser provider desktop:", e);
+            }
+          } else {
+            statusDiv.innerText = "❌ Extension Phantom non détectée (installez Phantom ou utilisez l'app sur mobile)";
+          }
+        } catch (err) {
+          console.error("connectDesktop error:", err);
+          statusDiv.innerText = "Erreur: " + (err?.message || err);
+        }
+      }
+
+      // Gestionnaire de clic robuste
+      function onConnectClick(e) {
+        e.preventDefault();
+        console.log("connectButton clicked, isMobile:", isMobile());
+        if (isMobile()) {
+          connectMobile();
+        } else {
+          connectDesktop();
+        }
+      }
+
+      // Attache les listeners (click + touchstart pour mobiles)
+      connectBtn.addEventListener('click', onConnectClick, { passive: false });
+      connectBtn.addEventListener('touchstart', onConnectClick, { passive: false });
+
+      // Traiter immédiatement un éventuel retour Phantom
+      handlePhantomReturn();
+    });
+  </script>
+</body>
+</html>
