--- a/index.html
+++ b/index.html
@@ -21,6 +21,26 @@
     html, body { font-family: "Inter", system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial; }
   </style>
 </head>
+  <script>
+  document.addEventListener('DOMContentLoaded', () => {
+    const btn = document.getElementById('connectButton');
+    const status = document.getElementById('status');
+    const info = document.getElementById('wallet-info');
+
+    if (!btn) {
+      console.warn('Bouton connectButton introuvable');
+      return;
+    }
+
+    btn.addEventListener('click', () => {
+      status.innerText = "Tentative de connexion...";
+      console.log("Bouton click OK");
+      // Ici tu appelleras connectMobile() ou connectDesktop()
+      info.innerText = "Clic détecté, logique de connexion à implémenter.";
+    });
+  });
+</script>
+
 <body class="min-h-screen bg-black text-white font-inter flex flex-col">
 
   <!-- Header -->
@@ -31,12 +51,21 @@
 
   <!-- Connexion Phantom -->
   <section class="flex flex-col items-center mt-8 px-4">
-    <button id="connectButton" type="button" class="w-full md:w-auto px-6 py-3 bg-purple-600 hover:bg-purple-700 rounded-lg font-bold">
-      Se connecter avec Phantom
-    </button>
-    <div id="status" class="mt-4 text-gray-400 text-sm md:text-base">Statut : Non connecté</div>
-    <div id="wallet-info" class="mt-2 text-green-400 font-mono break-words text-xs md:text-sm">En attente de connexion...</div>
-  </section>
+  <button 
+    id="connectButton" 
+    type="button" 
+    class="w-full md:w-auto px-6 py-3 bg-purple-600 hover:bg-purple-700 rounded-lg font-bold">
+    Se connecter avec Phantom
+  </button>
+
+  <div id="status" class="mt-4 text-gray-400 text-sm md:text-base">
+    Statut : Non connecté
+  </div>
+  <div id="wallet-info" class="mt-2 text-green-400 font-mono break-words text-xs md:text-sm">
+    En attente de connexion...
+  </div>
+</section>
+
 
   <!-- Formulaire Token -->
   <section class="flex-grow flex items-center justify-center px-4 mt-10">
