--- a/index.html
+++ b/index.html
@@ -39,7 +39,52 @@
       info.innerText = "Clic détecté, logique de connexion à implémenter.";
     });
   });
+    
+<script>
+  document.addEventListener('DOMContentLoaded', () => {
+    const btn = document.getElementById('connectButton');
+    const status = document.getElementById('status');
+    const info = document.getElementById('wallet-info');
+
+    function isMobile() {
+      return /Android|iPhone|iPad|iPod/i.test(navigator.userAgent);
+    }
+
+    async function connectDesktop() {
+      status.innerText = "Tentative de connexion via extension...";
+      try {
+        if (window.solana && window.solana.isPhantom) {
+          const resp = await window.solana.connect();
+          status.innerText = "✅ Connecté via extension";
+          info.innerText = resp.publicKey.toString();
+          window.provider = window.solana; // exposer le provider
+        } else {
+          status.innerText = "❌ Extension Phantom non détectée (installez Phantom ou utilisez l'app sur mobile)";
+        }
+      } catch (err) {
+        status.innerText = "Erreur: " + (err?.message || err);
+      }
+    }
+
+    function connectMobile() {
+      status.innerText = "📱 Redirection vers l'app Phantom...";
+      const appUrl = encodeURIComponent(window.location.origin + window.location.pathname);
+      const deepLink =
+        `https://phantom.app/ul/v1/connect?app_url=${appUrl}&redirect_link=${appUrl}&cluster=mainnet-beta`;
+      window.location.href = deepLink;
+    }
+
+    btn.addEventListener('click', (e) => {
+      e.preventDefault();
+      if (isMobile()) {
+        connectMobile();
+      } else {
+        connectDesktop();
+      }
+    });
+  });
 </script>
+
 
 <body class="min-h-screen bg-black text-white font-inter flex flex-col">
 
