--- a/index.html
+++ b/index.html
@@ -7,85 +7,15 @@
 
   <!-- Tailwind + Fonts -->
   <script src="https://cdn.tailwindcss.com"></script>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;800&display=swap" rel="stylesheet">
 
-  <!-- Librairies Solana / Raydium / NFT.storage -->
+  <!-- Librairies Solana -->
   <script src="https://unpkg.com/@solana/web3.js@1.91.7/lib/index.iife.min.js"></script>
-  <script src="https://unpkg.com/@solana/spl-token@0.4.8/lib/index.iife.min.js"></script>
-  <script src="https://unpkg.com/@metaplex-foundation/umi@0.8.10/dist/index.iife.js"></script>
-  <script src="https://unpkg.com/@metaplex-foundation/umi-bundle-defaults@0.8.10/dist/index.iife.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/nft.storage@7.1.1/dist/index.min.js"></script>
-  <script src="https://unpkg.com/@raydium/sdk@latest/dist/raydium-sdk.min.js"></script>
 
   <style>
     html, body { font-family: "Inter", system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial; }
   </style>
 </head>
-  <script>
-  document.addEventListener('DOMContentLoaded', () => {
-    const btn = document.getElementById('connectButton');
-    const status = document.getElementById('status');
-    const info = document.getElementById('wallet-info');
-
-    if (!btn) {
-      console.warn('Bouton connectButton introuvable');
-      return;
-    }
-
-    btn.addEventListener('click', () => {
-      status.innerText = "Tentative de connexion...";
-      console.log("Bouton click OK");
-      // Ici tu appelleras connectMobile() ou connectDesktop()
-      info.innerText = "Clic détecté, logique de connexion à implémenter.";
-    });
-  });
-    
-<script>
-  document.addEventListener('DOMContentLoaded', () => {
-    const btn = document.getElementById('connectButton');
-    const status = document.getElementById('status');
-    const info = document.getElementById('wallet-info');
-
-    function isMobile() {
-      return /Android|iPhone|iPad|iPod/i.test(navigator.userAgent);
-    }
-
-    async function connectDesktop() {
-      status.innerText = "Tentative de connexion via extension...";
-      try {
-        if (window.solana && window.solana.isPhantom) {
-          const resp = await window.solana.connect();
-          status.innerText = "✅ Connecté via extension";
-          info.innerText = resp.publicKey.toString();
-          window.provider = window.solana; // exposer le provider
-        } else {
-          status.innerText = "❌ Extension Phantom non détectée (installez Phantom ou utilisez l'app sur mobile)";
-        }
-      } catch (err) {
-        status.innerText = "Erreur: " + (err?.message || err);
-      }
-    }
-
-    function connectMobile() {
-      status.innerText = "📱 Redirection vers l'app Phantom...";
-      const appUrl = encodeURIComponent(window.location.origin + window.location.pathname);
-      const deepLink =
-        `https://phantom.app/ul/v1/connect?app_url=${appUrl}&redirect_link=${appUrl}&cluster=mainnet-beta`;
-      window.location.href = deepLink;
-    }
-
-    btn.addEventListener('click', (e) => {
-      e.preventDefault();
-      if (isMobile()) {
-        connectMobile();
-      } else {
-        connectDesktop();
-      }
-    });
-  });
-</script>
-
-
 <body class="min-h-screen bg-black text-white font-inter flex flex-col">
 
   <!-- Header -->
@@ -96,21 +26,20 @@
 
   <!-- Connexion Phantom -->
   <section class="flex flex-col items-center mt-8 px-4">
-  <button 
-    id="connectButton" 
-    type="button" 
-    class="w-full md:w-auto px-6 py-3 bg-purple-600 hover:bg-purple-700 rounded-lg font-bold">
-    Se connecter avec Phantom
-  </button>
+    <button 
+      id="connectButton" 
+      type="button" 
+      class="w-full md:w-auto px-6 py-3 bg-purple-600 hover:bg-purple-700 rounded-lg font-bold">
+      Se connecter avec Phantom
+    </button>
 
-  <div id="status" class="mt-4 text-gray-400 text-sm md:text-base">
-    Statut : Non connecté
-  </div>
-  <div id="wallet-info" class="mt-2 text-green-400 font-mono break-words text-xs md:text-sm">
-    En attente de connexion...
-  </div>
-</section>
-
+    <div id="status" class="mt-4 text-gray-400 text-sm md:text-base">
+      Statut : Non connecté
+    </div>
+    <div id="wallet-info" class="mt-2 text-green-400 font-mono break-words text-xs md:text-sm">
+      En attente de connexion...
+    </div>
+  </section
 
   <!-- Formulaire Token -->
   <section class="flex-grow flex items-center justify-center px-4 mt-10">
